--- a/src/App.css
+++ b/src/App.css
@@ -181,7 +181,19 @@
     border-radius: 8px;
     font-weight: 500;
 }
+.menu-item-details {
+    color: black;
+    padding: 8px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-bottom: 4px;
+    transition: background-color 0.2s ease;
+}
 
+.menu-item-details.selected {
+    background-color: rgba(195, 183, 183, 0.53); /* более тёмный зелёный или любой другой */
+    font-weight: bold;
+}
 
 
 
